--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
   <header>
     <h1>About Us</h1>
     <p>We are a team of travel enthusiasts dedicated to helping you explore the world with personalized recommendations and engaging content.</p>
-    <img src="picture/bagabeach.jpg" alt="Team or Travel" width="400">
+    <img src="bagabeach.jpg" alt="Team or Travel" width="400">
   </header>
 </body>
 </html>
+
