--- a/index.html
+++ b/index.html
@@ -23,24 +23,25 @@
   <section id="beach">
     <h2>Beach Recommendation</h2>
     <p>Don't miss the beautiful beaches of <strong>Baga</strong> in Goa and <strong>Varkala</strong> in Kerala for sun, sand, and stunning sunsets.</p>
-    <img src="pictures/bagabeach.jpg" alt="Beach 1">
-    <img src="pictures/varkala.jpg" alt="Beach 2">
+    <img src="bagabeach.jpg" alt="Beach 1">
+    <img src="varkala.jpg" alt="Beach 2">
   </section>
 
   <section id="temple">
     <h2>Temple Recommendation</h2>
     <p>Must-visit temples include the magnificent <strong>Somnath Temple</strong> in Gujarat and the sacred <strong>Dwarka Temple</strong>, perfect for a spiritual journey.</p>
-    <img src="pictures/somnath.jpg" alt="Temple 1">
-    <img src="pictures/dwarka.jpg" alt="Temple 2">
+    <img src="somnath.jpg" alt="Temple 1">
+    <img src="dwarka.jpg" alt="Temple 2">
   </section>
 
   <section id="country">
     <h2>Explore Japan</h2>
     <p>From Tokyo to Kyoto, experience culture, food, and scenic beauty.</p>
-    <img src="pictures/tokyo.jpg" alt="Country 1">
-    <img src="pictures/kyoto.jpg" alt="Country 2">
+    <img src="tokyo.jpg" alt="Country 1">
+    <img src="kyoto.jpg" alt="Country 2">
   </section>
 
   <script src="script.js"></script>
 </body>
 </html>
+
